--- a/public/css/app.css
+++ b/public/css/app.css
@@ -485,6 +485,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .left-2 {
   left: 0.5rem;
 }
+.right-8 {
+  right: 2rem;
+}
+.right-10 {
+  right: 2.5rem;
+}
 .m-1 {
   margin: 0.25rem;
 }
@@ -631,9 +637,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .w-64 {
   width: 16rem;
-}
-.w-1\/2 {
-  width: 50%;
 }
 .max-w-lg {
   max-width: 32rem;
@@ -840,31 +843,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(29 78 216 / var(--tw-bg-opacity));
 }
-.bg-gradient-to-br {
-  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
-}
-.bg-gradient-to-r {
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
-.bg-gradient-to-b {
-  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
-}
 .from-indigo-500 {
   --tw-gradient-from: #6366f1;
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(99 102 241 / 0));
 }
-.from-blue-500 {
-  --tw-gradient-from: #3b82f6;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(59 130 246 / 0));
-}
-.via-blue-600 {
-  --tw-gradient-stops: var(--tw-gradient-from), #2563eb, var(--tw-gradient-to, rgb(37 99 235 / 0));
-}
 .to-indigo-800 {
   --tw-gradient-to: #3730a3;
-}
-.to-blue-700 {
-  --tw-gradient-to: #1d4ed8;
 }
 .bg-clip-padding {
   background-clip: padding-box;
@@ -1204,9 +1188,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hover\:bg-blue-800:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(30 64 175 / var(--tw-bg-opacity));
-}
-.hover\:bg-gradient-to-br:hover {
-  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
 }
 .hover\:text-indigo-600:hover {
   --tw-text-opacity: 1;
